Fixes search input zoom behavior on ios. Safari will zoom if input has font size under 16px

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -66,3 +66,5 @@ div[class*="language-"],
 div[class*="language-"] *
   font-family: 'IBM Plex Mono', monospace;
 
+.search-box input
+  font-size: 16px!important;
